--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
         <h1>Jessica Randall</h1>
         <p class="profile_adress">London, United Kingdom</p>
         <p class="profile_description">"Front-end developer and avid reader."</p>
-        <a class="profile_link" href="#">GitHub</a> 
-        <a class="profile_link" href="#">Frontend Mentor</a> 
-        <a class="profile_link" href="#">LinkedIn</a>
-        <a class="profile_link" href="#">Twitter</a>
-        <a class="profile_link" href="#">Instagram</a>
+	<ul>
+		<li><a class="profile_link" href="#">GitHub</a></li>
+	       	<li><a class="profile_link" href="#">Frontend Mentor</a></li>
+        	<li><a class="profile_link" href="#">LinkedIn</a></li>
+        	<li><a class="profile_link" href="#">Twitter</a></li>
+        	<li><a class="profile_link" href="#">Instagram</a></li>
+	</ul>
       </article>
     </main>
   </body>
