--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
   <body>
     <main>
       <article class="profile">
-        <img src="./assets/images/avatar-jessica.jpeg" alt="profil picture">
+        <img src="./assets/images/avatar-jessica.jpeg" alt="profil picture" />
         <h1>Jessica Randall</h1>
         <p class="profile_adress">London, United Kingdom</p>
-        <p class="profile_description">"Front-end developer and avid reader."</p>
-	<ul>
-		<li><a class="profile_link" href="#">GitHub</a></li>
-	       	<li><a class="profile_link" href="#">Frontend Mentor</a></li>
-        	<li><a class="profile_link" href="#">LinkedIn</a></li>
-        	<li><a class="profile_link" href="#">Twitter</a></li>
-        	<li><a class="profile_link" href="#">Instagram</a></li>
-	</ul>
+        <p class="profile_description">
+          "Front-end developer and avid reader."
+        </p>
+        <ul>
+          <li><a class="profile_link" href="#">GitHub</a></li>
+          <li><a class="profile_link" href="#">Frontend Mentor</a></li>
+          <li><a class="profile_link" href="#">LinkedIn</a></li>
+          <li><a class="profile_link" href="#">Twitter</a></li>
+          <li><a class="profile_link" href="#">Instagram</a></li>
+        </ul>
       </article>
     </main>
   </body>
